added in random info for address and stuff

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Calgary, Alberta, Canada</p>
               </div>
 
               <div class="email">
@@ -691,7 +691,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 XXX-XXXX</p>
               </div>
 
             </div>
@@ -742,9 +742,9 @@
             <div class="footer-info">
               <h3>Initia<span>.</span></h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
+                Calgary, Alberta <br>
+                Canada<br><br>
+                <strong>Phone:</strong> +1 XXX-XXXX<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
               <div class="social-links mt-3">
