chagning top section

--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Lorem Ipsum</a></h3>
+            <h3><a href="">Find a Rehab Center</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Dolor Sitema</a></h3>
+            <h3><a href="">Find a Detox Center</a></h3>
           </div>
         </div>
-        <div class="col-xl-2 col-md-4">
+        <!--<div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
             <h3><a href="">Sedare Perspiciatis</a></h3>
@@ -121,7 +121,7 @@
             <i class="ri-database-2-line"></i>
             <h3><a href="">Nemos Enimade</a></h3>
           </div>
-        </div>
+        </div>-->
       </div>
 
     </div>
