--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!--<section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
         <div class="row">
@@ -211,7 +211,7 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section>--><!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -281,7 +281,7 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
+          <h3>Want to increase the </h3>
           <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <a class="cta-btn" href="#">Call To Action</a>
         </div>
