--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Want to increase the </h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>Have a rehabilitation or detox center you want to add?</h3>
+          <p> If you are a new center that would like to be added to our database, please contact us below!</p>
+          <a class="cta-btn" href="#contact">Contact Us</a>
         </div>
 
       </div>
