hanged phone number

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 XXX-XXXX</p>
+                <p>+1 (403)-999-9999</p>
               </div>
 
             </div>
@@ -745,7 +745,7 @@
               <p>
                 Calgary, Alberta <br>
                 Canada<br><br>
-                <strong>Phone:</strong> +1 XXX-XXXX<br>
+                <strong>Phone:</strong> +1 (403)-999-9999<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
               <div class="social-links mt-3">
