--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!--<section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -440,10 +440,11 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>--><!-- End Portfolio Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+
+    <!--<section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
@@ -487,12 +488,12 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
-          </div>
+            </div>--><!-- End .content-->
+          <!--</div>
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section> --> <!-- End Counts Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
@@ -573,7 +574,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -658,7 +659,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section> --> <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
