--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Find a Rehab Center</a></h3>
+            <h3><a href="#services">Find a Rehab Center</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Find a Detox Center</a></h3>
+            <i class="ri-store-line"></i>
+            <h3><a href="#services">Find a Detox Center</a></h3>
           </div>
         </div>
         <!--<div class="col-xl-2 col-md-4">
@@ -496,7 +496,7 @@
     </section> --> <!-- End Counts Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+   <!--<section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -513,7 +513,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
