white chars erase test

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                   </div> <!-- form-check.// -->
           
                   <div class="custom-control custom-checkbox">
-                    <span class="float-right badge badge-light round">17</span>
+                    <!--<span class="float-right badge badge-light round">17</span>-->
                       <input type="checkbox" class="custom-control-input" id="Check3">
                       <label class="custom-control-label" for="Check3">Detox Center</label>
                   </div> <!-- form-check.// -->
@@ -282,7 +282,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Lorem Ipsum</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
