--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
         <div class="row">
 
           <!-- ADDING IN FILTER GUI -->
-          <div class="card">
+          <!--<div class="card">-->
+          <div class="col-lg-4 col-md-6 order-1 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <article class="card-group-item">
               <header class="card-header">
                 <h4 class="title">Range input </h4>
@@ -276,7 +277,7 @@
           </div> <!-- card.// -->
           <!-- END OF FILTER GUI -->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 order-2 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Lorem Ipsum</a></h4>
@@ -284,7 +285,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 order-2 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Sed ut perspiciatis</a></h4>
