--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div> <!-- card.// -->
           <!-- END OF FILTER GUI -->
 
-          <div class="col-lg-4 col-md-6 order-2 order-lg-2 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Lorem Ipsum</a></h4>
@@ -285,7 +285,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 order-2 order-lg-2 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Sed ut perspiciatis</a></h4>
@@ -293,7 +293,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 order-2 order-lg-2 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Magni Dolores</a></h4>
@@ -301,7 +301,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 order-2 order-lg-2 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4><a href="">Nemo Enim</a></h4>
@@ -309,7 +309,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 order-2 order-lg-2 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
               <h4><a href="">Dele cardo</a></h4>
@@ -317,7 +317,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 order-2 order-lg-2 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
               <h4><a href="">Divera don</a></h4>
