fixed these ugly things

--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 1</a></h4>
-              <p>Distance: 5.6km</p>
               <p> This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
