--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 1</a></h4>
+              <p> Distance: 5.6 km</p>
               <p> This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
           </div>
@@ -286,7 +287,8 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 2</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p> Distance: 13 km</p>
+              <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
           </div>
 
@@ -294,7 +296,8 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 3</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p> Distance: 15 km</p>
+              <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
           </div>
 
@@ -302,7 +305,8 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 4</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <p> Distance: 21 km</p>
+              <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
           </div>
 
@@ -310,7 +314,8 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 5</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <p> Distance: 44 km</p>
+              <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
           </div>
 
@@ -318,7 +323,8 @@
             <div class="icon-box">
               <div class="icon"><i class="ri-store-line"></i></div>
               <h4><a href="">Facility 6</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <p> Distance: 50 km</p>
+              <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
             </div>
           </div>
 
