--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
         <!-- ADDING IN FILTER GUI -->
         <div class=card>
           <article class="card-group-item">
+            <header class="card-header">
               <h4 class="title">Price </h4>
+            </header>
             <div class="filter-content">
               <div class="card-body">
               <div class="form-row">
@@ -243,15 +245,10 @@
           </article> <!-- card-group-item.// -->
           <article class="card-group-item">
             <header class="card-header">
-              <h4 class="title">Selection </h4>
+              <h4 class="title">Center Type </h4>
             </header>
             <div class="filter-content">
               <div class="card-body">
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="Check1">
-                    <label class="custom-control-label" for="Check1">No Smoking</label>
-                </div> <!-- form-check.// -->
-        
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="Check2">
                     <label class="custom-control-label" for="Check2">Rehab Center</label>
@@ -262,10 +259,6 @@
                     <label class="custom-control-label" for="Check3">Detox Center</label>
                 </div> <!-- form-check.// -->
         
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="Check4">
-                    <label class="custom-control-label" for="Check4">Fourth filter</label>
-                </div> <!-- form-check.// -->
               </div> <!-- card-body.// -->
             </div>
           </article> <!-- card-group-item.// -->
@@ -280,6 +273,8 @@
               <h4><a href="">Facility 1</a></h4>
               <p> Distance: 5.6 km</p>
               <p> This facility is known for its high success rate. Includes long-term and short-term care.</p>
+              <p> </p>
+              <p> AVAILABLE</p>
             </div>
           </div>
 
