smoking filter added

--- a/index.html
+++ b/index.html
@@ -262,6 +262,27 @@
               </div> <!-- card-body.// -->
             </div>
           </article> <!-- card-group-item.// -->
+
+          <article class="card-group-item">
+            <header class="card-header">
+              <h4 class="title">Smoking </h4>
+            </header>
+            <div class="filter-content">
+              <div class="card-body">
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="Check2">
+                    <label class="custom-control-label" for="Check2">Smoking Allowed</label>
+                </div> <!-- form-check.// -->
+        
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="Check3">
+                    <label class="custom-control-label" for="Check3">No Smoking</label>
+                </div> <!-- form-check.// -->
+        
+              </div> <!-- card-body.// -->
+            </div>
+          </article> <!-- card-group-item.// -->
+
         </div> <!-- card.// -->
         <!-- END OF FILTER GUI -->
 
