--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
         </div> <!-- card.// -->
         <!-- END OF FILTER GUI -->
 
+        <div>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d160709.0961274496!2d-114.17394177409399!3d50.99620069045962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srehab%20centers!5e0!3m2!1sen!2sca!4v1630087372614!5m2!1sen!2sca" frameborder="0" allowfullscreen></iframe>
+        </div> <!--To get any location you want, search it up on google maps, click share then embed a map-->
+
+
         <div class="row">
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
@@ -294,8 +299,8 @@
               <h4><a href="">Facility 1</a></h4>
               <p> Distance: 5.6 km</p>
               <p> This facility is known for its high success rate. Includes long-term and short-term care.</p>
-              <p> </p>
-              <p> AVAILABLE</p>
+              <p></p>
+              <p> SPOTS AVAILABLE</p>
             </div>
           </div>
 
@@ -305,6 +310,7 @@
               <h4><a href="">Facility 2</a></h4>
               <p> Distance: 13 km</p>
               <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
+              <p> SPOTS UNAVAILABLE</p>
             </div>
           </div>
 
@@ -314,6 +320,7 @@
               <h4><a href="">Facility 3</a></h4>
               <p> Distance: 15 km</p>
               <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
+              <p> SPOTS UNAVAILABLE</p>
             </div>
           </div>
 
@@ -323,6 +330,7 @@
               <h4><a href="">Facility 4</a></h4>
               <p> Distance: 21 km</p>
               <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
+              <p> SPOTS AVAILABLE</p>
             </div>
           </div>
 
@@ -332,6 +340,7 @@
               <h4><a href="">Facility 5</a></h4>
               <p> Distance: 44 km</p>
               <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
+              <p> SPOTS AVAILABLE</p>
             </div>
           </div>
 
@@ -341,6 +350,7 @@
               <h4><a href="">Facility 6</a></h4>
               <p> Distance: 50 km</p>
               <p>This facility is known for its high success rate. Includes long-term and short-term care.</p>
+              <p> SPOTS AVAILABLE</p>
             </div>
           </div>
 
