--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class=card>
           <article class="card-group-item">
             <header class="card-header">
-              <h4 class="title">Price </h4>
+              <h4 class="title">Price per Day </h4>
             </header>
             <div class="filter-content">
               <div class="card-body">
